--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press 'w' to move forward, 's' to move backward, 'a' to go left, 'd' to go right, and 'h' for hyperspace 
+		    Press the screen to start. Then'w' to move forward, 's' to move backward, 'a' to go left, 'd' to go right, and 'h' with any key for hyperspace 
 	    </footer>
 	</body>
 </html>
