--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press the screen to start. Then 'w' to move forward, 's' to move backward, 'a' to go left, 'd' to go right, and 'h' with any key for hyperspace 
+		    Press the screen to start the game! <br /> 
+		    'w' to move forward, 's' to move backward, 'a' to go left, 'd' to go right <br />
+		    'h' with any key for hyperspace, spacebar with any key to shoot 
 	    </footer>
 	</body>
 </html>
